# event_ragu

./: .gitignore  README.md  agent.py  agent2.py  agent_tools.py  build_db.py  deepeval_summary.csv  deepeval_visualization.ipynb  eval.ipynb  generated_QUERIES_Polish_16_07.json  main.py  pyproject.toml  question_generation.ipynb  scrape_events.py  setup_db.py  utils.py
.deepeval/: .deepeval-cache_20250717_1149.json  .deepeval-cache_20250717_2050.json  .deepeval_telemetry_.txt  .deepeval_telemetry_20250717_1027.txt  .deepeval_telemetry_20250717_1149.txt  .deepeval_telemetry_20250717_2050.txt  .latest_test_run20250717_1149.json  .latest_test_run20250717_2050.json
.deepeval/run_20250717_2103/: .deepeval-cache_20250717_2103.json  .deepeval_telemetry_20250717_2103.txt  .latest_test_run20250717_2103.json
.deepeval/run_20250720_2156/: .deepeval-cache_20250720_2156.json  .deepeval_telemetry_20250720_2156.txt  .latest_test_run20250720_2156.json
.deepeval/run_20250721_0950/: .deepeval-cache_20250721_0950.json  .deepeval_telemetry_20250721_0950.txt  .latest_test_run20250721_0950.json
.deepeval/run_20250721_1130/: .deepeval-cache_20250721_1130.json  .deepeval_telemetry_20250721_1130.txt  .latest_test_run20250721_1130.json
.deepeval/run_20250721_1306/: .deepeval-cache_20250721_1306.json  .deepeval_telemetry_20250721_1306.txt  .latest_test_run20250721_1306.json
.deepeval/run_20250721_1451/: .deepeval-cache_20250721_1451.json  .deepeval_telemetry_20250721_1451.txt  .latest_test_run20250721_1451.json
.deepeval/run_20250721_1557/: .deepeval-cache_20250721_1557.json  .deepeval_telemetry_20250721_1557.txt  .latest_test_run20250721_1557.json
data/: question_generation.ipynb  scrape_events.py  scrape_utils.py  setup_db.py
evaluation/: deepeval_visualization.ipynb
(+464 files in other folders)
