[project]
name = "my-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.55.0",
    "beautifulsoup4>=4.13.4",
    "chromadb>=0.5.0",
    "deepeval>3",
    "instructor>=1.9.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "logfire>=3.25.0",
    "lxml>=6.0.0",
    "markdownify>=1.1.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "openai>=1.93.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
